--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,13 @@
             <artifactId>json-path</artifactId>
             <version>4.3.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
